k8s/postgres-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: postgres
  template:
    metadata:
      labels:
        component: postgres
    spec:
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: database-persistent-volume-claim
      containers:
        - name: postgres
          image: postgres
          ports:
            - containerPort: 5432 # default postgres port
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data # default storage location for postgres
              subPath: postgres # postgres specific (this creates a folder called postgres on the actual persistent volume, where all the stuff is inside)
